<resources>
    <string name="app_name">AKC Rally® Practice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--TODO need to come up with a better app_description-->

    <string name="app_description">Single Source For All Your AKC Rally® Practice Needs</string>
    <string name="begin">Begin</string>
    <string name="intro">"Let's Practice!"</string>
    <string name="action_settings">Settings</string>
    <string name="another">ANOTHER</string>

    <!-- Nav Drawer -->
    <string name="learn">Learn</string>
    <string name="cards">Rally® Cards</string>
    <string name="video">Demo Videos</string>
    <string name="akc">Rule Book</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="shareSubject">AKC RALLY® PRACTICE</string>
    <string name="shareBody">Check out this great app!</string>
    <string name="shareVia">Share via</string>
    <string name="rate">Rate</string>
    <string name="support">Support</string>

    <!-- Main -->
    <string name="setting">Settings</string>
    <string name="nav_akc">Official Rule Book</string>
    <string name="nav_videos">Novice Rally Playlist</string>
    <string name="support_email_subject">Support Request for Rally Practice Android App</string>
    <string name="send_email">Send email:</string>
    <string name="unable_to_find_app">Unable to find Rally Practice</string>
    <string name="title">Title</string>
    <string name="url">Url</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>