<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/learn">
            <menu>
                <item
                    android:id="@+id/nav_videos"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/video" />
                <!--<item-->
                    <!--android:id="@+id/nav_gallery"-->
                    <!--android:icon="@drawable/ic_menu_gallery"-->
                    <!--android:title="@string/cards" />-->
                <item
                    android:id="@+id/nav_akc"

                    android:title="@string/akc"
                    android:icon="@mipmap/akc"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_support"
                android:title="@string/support" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_thumbs_up"
                android:title="@string/rate" />
        </menu>
    </item>
</menu>
